--- a/style/style.css
+++ b/style/style.css
@@ -116,7 +116,7 @@ a {
 }
 
 .bg21 {
-    background-image: url("../img/Emya.jpg")
+    background-image: url("../img/Emya.jpg");
 }
 
 .bg22 {
@@ -132,7 +132,15 @@ a {
 }
 
 .bg31 {
-    background-image: url("../img/mn_sabers.png")
+    background-image: url("../img/mn_sabers.png");
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 101vh;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 /*.bg12 {background-image: url("../img/alter.jpg")}
